Fixed image stretch issue

--- a/client/components/Playlist/playlist.module.scss
+++ b/client/components/Playlist/playlist.module.scss
@@ -12,6 +12,7 @@
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25),
       0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 5px;
+    object-fit: cover;
     cursor: pointer;
   }
 
